@@ -1,5 +1,5 @@
 #
-# $Id: all.dem,v 1.26 2006/10/03 13:20:00 mikulik Exp $
+# $Id: all.dem,v 1.27 2006/10/21 04:32:41 sfeam Exp $
 #
 # Executes ALL demos in this directory, in functionality order.
 #
@@ -185,6 +185,10 @@ reset
 
 print "********************** file datastrings.dem *********************"
 load "datastrings.dem"
+reset
+
+print "********************** file iterate.dem *********************"
+load "iterate.dem"
 reset
 
 print "********************** file histograms.dem *********************"
