@@ -51,27 +51,7 @@ set style histogram rowstacked
 set style fill solid border -1
 set boxwidth 0.75
 #
-plot 'immigration.dat' using 2:xtic(1), \
-'' using 3, \
-'' using 4, \
-'' using 5, \
-'' using 6, \
-'' using 7, \
-'' using 8, \
-'' using 9, \
-'' using 10, \
-'' using 11, \
-'' using 12, \
-'' using 13, \
-'' using 14, \
-'' using 15, \
-'' using 16, \
-'' using 17, \
-'' using 18, \
-'' using 19, \
-'' using 20, \
-'' using 21, \
-'' using 22
+plot 'immigration.dat' using 2:xtic(1), for [i=2:22] '' using i
 #
 pause -1 "<cr> to rescale each stack to % of total"
 #
@@ -90,27 +70,7 @@ set style fill solid border -1
 set boxwidth 0.75
 #
 plot 'immigration.dat' using (100.*$2/$24):xtic(1) t 2, \
-'' using (100.*$3/$24) t 3, \
-'' using (100.*$4/$24) t 4, \
-'' using (100.*$5/$24) t 5, \
-'' using (100.*$6/$24) t 6, \
-'' using (100.*$7/$24) t 7, \
-'' using (100.*$8/$24) t 8, \
-'' using (100.*$9/$24) t 9, \
-'' using (100.*$10/$24) t 10, \
-'' using (100.*$11/$24) t 11, \
-'' using (100.*$12/$24) t 12, \
-'' using (100.*$13/$24) t 13, \
-'' using (100.*$14/$24) t 14, \
-'' using (100.*$15/$24) t 15, \
-'' using (100.*$16/$24) t 16, \
-'' using (100.*$17/$24) t 17, \
-'' using (100.*$18/$24) t 18, \
-'' using (100.*$19/$24) t 19, \
-'' using (100.*$20/$24) t 20, \
-'' using (100.*$21/$24) t 21, \
-'' using (100.*$22/$24) t 22, \
-'' using (100.*$23/$24) t 23
+     for [i=3:23] '' using (100.*column(i)/column(24)) title column(i) 
 #
 pause -1 "Now try histograms stacked by columns"
 #
