@@ -1,5 +1,14 @@
 2006-10-20  Ethan Merritt  <merritt@u.washington.edu>
 
+	* src/graph3d.h src/parse.c src/parse.h src/plot2d.c src/plot3d.c:
+	Implement a mechanism for iteration within a plot or splot command.
+	    {s}plot for [<var>=<start>:<end>{:<incr>}] ...rest of plot clause...
+
+	* docs/gnuplot.doc demo/iterate.dem demo/histograms.dem demo/all.dem: 
+	Illustrate use of iteration in plot commands.
+
+2006-10-20  Ethan Merritt  <merritt@u.washington.edu>
+
 	* src/datafile.c (df_open) docs/gnuplot.doc:
 	Current syntax for using specs allows
 	    plot foo using 1:2 title column
